--- a/assets/map.html
+++ b/assets/map.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      html,
+      body {
+        margin: 0px;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
@@ -14,45 +22,62 @@
     ></script>
   </head>
   <body>
-    <div id="a" style="margin-top: 60px;"></div>
-    <div id="map" style="width:100%;height:400px;"></div>
-    <button onclick="postMessage('test')">asdfasfasdfasdfasdfasdfasdfasdfasdf</button>
+    <div
+      id="container"
+      style="height: 100%; display: flex; flex-direction: column; align-items: stretch;"
+    >
+      <div id="map" style="flex: 1;"></div>
+    </div>
 
     <script>
-      document.getElementById('a').innerHTML = 'url: ' + location.href;
+      // document.getElementById('a').innerHTML = 'url: ' + location.href;
+
+      var LatLng = naver.maps.LatLng;
 
       var mapOptions = {
-        center: new naver.maps.LatLng(37.3595704, 127.105399),
+        center: new LatLng(37.3595704, 127.105399),
         zoom: 10,
       };
-      var map = new naver.maps.Map('map', mapOptions);
 
-      var mapElem = document.getElementById('map');
+      var mapContainer = document.getElementById('map');
+      var map = null;
+
+      initMap(mapContainer, mapOptions);
+
       document.addEventListener('message', function(event) {
         var data = event.data;
         postMessage(data);
         var action = JSON.parse(data);
+        actionHandler(action);
+      });
+
+      function actionHandler(action) {
+        var type = action.type;
+        var payload = action.payload;
         switch (action.type) {
-          case 'resize':
-            resizeMap(action.payload.width, action.payload.height);
+          case 'initialize': {
+            initMap(mapContainer, mapOptions);
             return;
-          case 'resizeToWindow':
-            resizeToWindow();
+          }
+          case 'setCenter': {
+            // CoordLiteral
+            map.setCenter(payload);
             return;
+          }
+          case 'panTo': {
+            map.panTo(payload.coords, {});
+            return;
+          }
           default:
             return;
         }
-      });
-
-      function resizeToWindow() {
-        postMessage('resizeToWindow')
-        postMessage(window.innerWidth + ',' + window.innerHeight)
-        resizeMap(window.innerWidth, window.innerHeight);
       }
 
-      function resizeMap(width, height) {
-        mapElem.style.width = width;
-        mapElem.style.height = height;
+      function initMap(el, options) {
+        if (map) {
+          map.destroy();
+        }
+        map = new naver.maps.Map(el, options);
       }
     </script>
   </body>
