Limit zoom levels

--- a/assets/map.html
+++ b/assets/map.html
@@ -121,6 +121,8 @@
         var mapOptions = {
           center: { lat: 36.37334626411133, lng: 127.36397930294454 },
           zoom: 11,
+          minZoom: 10,
+          maxZoom: 14
         };
 
         var mapContainer = document.getElementById('map');
