--- a/assets/map.html
+++ b/assets/map.html
@@ -110,9 +110,6 @@
               });
 
             }
-            case 'fitBounds': {
-                map.fitBounds(bounds);
-            }
             default:
               return;
           }
@@ -157,11 +154,16 @@
 
         var ping = setInterval(() => postAction('ping'), 66);
 
+        var min = {x: 127.35516786575319, y: 36.36317650086336},
+            max = {x: 127.37027406692503, y: 36.37634223427805};
+        var bounds = {north: max.y, east: max.x, south: min.y, west: min.x};
+
         var mapOptions = {
           center: { lat: 36.37334626411133, lng: 127.36397930294454 },
           zoom: 11,
           minZoom: 10,
           maxZoom: 14,
+          maxBounds: bounds,
         };
 
         var mapContainer = document.getElementById('map');
@@ -175,13 +177,8 @@
           postAction('click', { lat: coord.y, lng: coord.x });
         });
 
-        var min = {x: 127.35516786575319, y: 36.36317650086336},
-            max = {x: 127.37027406692503, y: 36.37634223427805};
-        var bounds = {north: max.y, east: max.x, south: min.y, west: min.x};
 
-        naver.maps.Event.addListener(map, "center_changed", function(center) {
-            postAction('centerChanged',center);
-        });
+
 
       })();
     </script>
